# MarginCallCalculator

./: README.md
Finance/: CMakeLists.txt  main.cpp
Finance/CommonTypes/: CMakeLists.txt  Currency.cpp  Currency.hpp  CurrencyTypes.cpp  CurrencyTypes.hpp  Day.cpp  Day.hpp  Logger.cpp  Logger.hpp  MoneyAmount.cpp  MoneyAmount.hpp  PercentRate.cpp  PercentRate.hpp  runTests.cpp  zztest.cpp
Finance/Entities/: Agreement.cpp  Agreement.hpp  Broker.cpp  Broker.hpp  CMakeLists.txt  Client.cpp  Client.hpp
Finance/src/: main.cpp  mainTest.cpp  marginCallCalculator.cpp  marginCallCalculator.hpp  marginCallCalculatorTest.cpp
