add_library(Currency Currency.hpp Currency.cpp)
add_library(CurrencyTypes CurrencyTypes.hpp CurrencyTypes.cpp)
add_library(Day Day.hpp Day.cpp)
add_library(Logger Logger.hpp Logger.cpp)
add_library(MoneyAmount MoneyAmount.hpp MoneyAmount.cpp)
add_library(PercentRate PercentRate.hpp PercentRate.cpp)
target_include_directories(Currency PUBLIC "../CommonTypes", "../Entities")
target_include_directories(CurrencyTypes PUBLIC "../CommonTypes", "../Entities")
target_include_directories(Day PUBLIC "../CommonTypes", "../Entities")
target_include_directories(Logger PUBLIC "../CommonTypes", "../Entities")
target_include_directories(MoneyAmount PUBLIC "../CommonTypes", "../Entities")
target_include_directories(PercentRate PUBLIC "../CommonTypes", "../Entities")

